--- a/Projects/portfolio website/potfolio.html
+++ b/Projects/portfolio website/potfolio.html
@@ -29,171 +29,203 @@
             <h1>Shubh<span>code.</span></h1>
         </div>
         <div class="navbarname">
-            <h1 class="home">home</h1>
-            <h1>about</h1>
-            <!-- <h1>Resume</h1> -->
-            <h1>Project</h1>
-            <h1>Contact</h1>
+            <a href="#home" class="active">Home</a>
+            <a href="#About">About</a>
+            <a href="#Project">Project</a>
+            <a href="#Contact">Contact</a>
         </div>
     </nav>
 
 
     <!-- home page -->
-    <div class="contaner">
+    <section id="home">
+        <div class="contaner">
 
-        <div class="card">
-            <img src="/img/final image.png" alt="">
+            <div class="card">
+                <img src="/img/final image.png" alt="">
+            </div>
+            <div class="card2">
+                <h5 class="hello">Hello <span> I'm</span></h5>
+                <h5 class="name"> Shubham Meshram</h5>
+                <h5>Web Developer</h5>
+                <button>CV</button>
+                <button>Contact info</button>
+            </div>
         </div>
-        <div class="card2">
-            <h5 class="hello">Hello <span> I'm</span></h5>
-            <h5 class="name"> Shubham Meshram</h5>
-            <h5>Web Developer</h5>
-            <button>CV</button>
-            <button>Contact info</button>
-        </div>
-    </div>
+    </section>
 
     <!-- about page -->
-    <div class="page2">
-        <div class="card">
-            <img src="/img/2.png" alt="">
+    <section id="About">
+        <div class="page2">
+            <div class="card">
+                <img src="/img/2.png" alt="">
 
-        </div>
-        <div class="card2">
-            <h1 class="about-me">About Me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam expedita, aliquid beatae neque sequi
-                consectetur iure quidem laudantium enim. Ab odio nesciunt iste aperiam vitae nihil voluptatum modi porro
-                eligendi, minus, fuga assumenda blanditiis repellat sint, hic exercitationem accusamus cupiditate. Rem
-                ratione recusandae ipsum doloribus natus, repellat excepturi temporibus reiciendis. Unde, rerum officiis
-                officia dolore quisquam nostrum commodi mollitia culpa reiciendis non autem reprehenderit esse vero quis
-                voluptates vel ullam delectus, at nisi itaque error cum sint nihil quod? Eligendi vero unde, sint
-                dolorum aliquid accusamus impedit illum debitis amet deserunt reprehenderit similique tempora nulla
-                expedita perspiciatis illo autem aperiam.</p>
+            </div>
+            <div class="card2">
+                <h1 class="about-me">About Me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam expedita, aliquid beatae neque sequi
+                    consectetur iure quidem laudantium enim. Ab odio nesciunt iste aperiam vitae nihil voluptatum modi
+                    porro
+                    eligendi, minus, fuga assumenda blanditiis repellat sint, hic exercitationem accusamus cupiditate.
+                    Rem
+                    ratione recusandae ipsum doloribus natus, repellat excepturi temporibus reiciendis. Unde, rerum
+                    officiis
+                    officia dolore quisquam nostrum commodi mollitia culpa reiciendis non autem reprehenderit esse vero
+                    quis
+                    voluptates vel ullam delectus, at nisi itaque error cum sint nihil quod? Eligendi vero unde, sint
+                    dolorum aliquid accusamus impedit illum debitis amet deserunt reprehenderit similique tempora nulla
+                    expedita perspiciatis illo autem aperiam.</p>
                 <!-- skills section -->
-            <div class="card3">
-                <h1 id="skills">Skills</h1>
-                <h1 id="Experience">Experience</h1>
-                <h1 id="Education">Education</h1>
-            </div>
-            <div class="card4">
-                <div class="skill1">
-                    <h3><i class="ri-html5-fill"> </i>HTML</h3>
-                    <h3><i class="ri-css3-fill"> </i>CSS</h3>
-                    <h3><i class="ri-javascript-fill"> </i>Javascript</h3>
+                <div class="card3">
+                    <h1 id="skills">Skills</h1>
+                    <h1 id="Experience">Experience</h1>
+                    <h1 id="Education">Education</h1>
+                </div>
+                <div class="card4">
+                    <div class="skill1">
+                        <h3><i class="ri-html5-fill"> </i>HTML</h3>
+                        <h3><i class="ri-css3-fill"> </i>CSS</h3>
+                        <h3><i class="ri-javascript-fill"> </i>Javascript</h3>
 
 
+                    </div>
+                    <div class="skill2">
+                        <h3><i class="fa-brands fa-node-js"></i> Node.js</h3>
+                        <h3><i class="fa-brands fa-js"></i> Express.js</h3>
+                        <h3><i class="fa-solid fa-database"></i> Mongodb</h3>
+                    </div>
+
+                    <div class="skill3">
+                        <h3><i class="fa-solid fa-database"></i> Mysql</h3>
+                        <h3><i class="ri-git-merge-line"> </i>Git</h3>
+                        <h3><i class="ri-github-fill"> </i>Github</h3>
+                    </div>
                 </div>
-                <div class="skill2">
-                    <h3><i class="fa-brands fa-node-js"></i> Node.js</h3>
-                    <h3><i class="fa-brands fa-js"></i> Express.js</h3>
-                    <h3><i class="fa-solid fa-database"></i> Mongodb</h3>
+                <!-- Experience section -->
+                <div class="card5">
+                    <div class="exp1">
+                        <h1>2020 - 2022</h1>
+                        <h2>Tax executive</h2>
+                        <h2>Figment Global Solutions pvt ltd </h2>
+                        <h2>Nagpur, Maharashtra, India</h2>
+                    </div>
+                    <div class="exp2">
+                        <h1>2018 - 2020</h1>
+                        <h2>Account Executive</h2>
+                        <h2>PVRS and Associates</h2>
+                        <h2>Nagpur, Maharashtra, India</h2>
+                    </div>
                 </div>
 
-                <div class="skill3">
-                    <h3><i class="fa-solid fa-database"></i> Mysql</h3>
-                    <h3><i class="ri-git-merge-line"> </i>Git</h3>
-                    <h3><i class="ri-github-fill"> </i>Github</h3>
-                </div>
-            </div>
-            <!-- Experience section -->
-            <div class="card5">
-                <div class="exp1">
-                    <h1>2020 - 2022</h1>
-                    <h2>Tax executive</h2>
-                    <h2>Figment Global Solutions pvt ltd </h2>
-                    <h2>Nagpur, Maharashtra, India</h2>
-                </div>
-                <div class="exp2">
-                    <h1>2018 - 2020</h1>
-                    <h2>Account Executive</h2>
-                    <h2>PVRS and Associates</h2>
-                    <h2>Nagpur, Maharashtra, India</h2>
+                <div class="card6">
+                    <div class="edu1">
+                        <h1>2022 - 2024</h1>
+                        <h2>MBA (AI-ML) </h2>
+                        <h2>Dr. D. Y. Patil Vidhyapith, Pune</h2>
+                    </div>
+                    <div class="edu2">
+                        <h1>2016 - 2019</h1>
+                        <h2>BCom (Accounting and Finance)</h2>
+                        <h2>Nagpur University</h2>
+                    </div>
                 </div>
             </div>
 
-            <div class="card6">
-                <div class="edu1">
-                    <h1>2022 - 2024</h1>
-                    <h2>MBA (AI-ML) </h2>
-                    <h2>Dr. D. Y. Patil Vidhyapith, Pune</h2>
-                </div>
-                <div class="edu2">
-                    <h1>2016 - 2019</h1>
-                    <h2>BCom (Accounting and Finance)</h2>
-                    <h2>Nagpur University</h2>
-                </div>
-            </div>
         </div>
-
-    </div>
+    </section>
     <!-- project section -->
-    <div class="page3">
-        <h1>Projects</h1>
-        <div class="contenar">
-            <div class="cards">
-                <div class="card1" id="card1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam eos
-                        quam aut iusto nihil officia quod! <a href="#"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+    <section id="Project">
+        <div class="page3">
+            <h1>Projects</h1>
+            <div class="contenar">
+                <div class="cards">
+                    <div class="card1" id="card1">
+                        <div class="hovercard">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam
+                                eos
+                                quam aut iusto nihil officia quod!</p>
+                            <div class="pbtns">
+                                <a class="pbtn" target="_blank" href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
+                                <a class="pbtn" href="#">Github</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+
                 </div>
+                <div class="cards">
+                    <div class="card1" id="card2">
+                        <div class="hovercard">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam
+                                eos
+                                quam aut iusto nihil officia quod!</p>
+                            <div class="pbtns">
+                                <a class="pbtn" target="_blank" href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
+                                <a class="pbtn" href="#">Github</a>
+                            </div>
+                        </div>
+                    </div>
 
 
+                </div>
+                <div class="cards">
+                    <div class="card1" id="card3">
+                        <div class="hovercard">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam
+                                eos
+                                quam aut iusto nihil officia quod!</p>
+                            <div class="pbtns">
+                                <a class="pbtn" target="_blank" href="https://shubhammeshram579.github.io/Animated-sport-club-website/">live</a>
+                                <a class="pbtn" href="#">Github</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
             </div>
-            <div class="cards">
-                <div class="card1" id="card2">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam eos
-                        quam aut iusto nihil officia quod! <a href="#"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-                </div>
-
-
-            </div>
-            <div class="cards">
-                <div class="card1" id="card3">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ipsum sapiente eaque ipsam eos
-                        quam aut iusto nihil officia quod! <a href="#"><i
-                                class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-                </div>
-
-
+            <div class="more">
+                <a class="more-p" href="#">More projects</a>
             </div>
         </div>
-        <div class="more">
-            <a class="more-p" href="#">More projects</a>
-        </div>
-    </div>
+    </section>
     <!-- contact page -->
-    <div class="page4">
-        <div class="cot1">
-            <h1>contact me</h1>
-            <div class="contact">
-                <i class="fa-solid fa-paper-plane"><a href="#"> shubhcode97@gmail.com</a></i>
-                <i class="fa-solid fa-phone"><a href="#">7038956822</a></i>
+    <section id="Contact">
+        <div class="page4">
+            <div class="cot1">
+                <h1>contact me</h1>
+                <div class="contact">
+                    <i class="fa-solid fa-paper-plane"><a href="#"> shubhcode97@gmail.com</a></i>
+                    <i class="fa-solid fa-phone"><a href="#">7038956822</a></i>
+                </div>
+                <div class="socialmedia">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-github"></i>
+                </div>
+                <input class="downloadbtn" type="submit" value="download cv">
+
             </div>
-            <div class="socialmedia">
-                <i class="fa-brands fa-linkedin"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-github"></i>
+            <div class="cot2">
+
+                <input class="name-email" type="text" name="yourname" id="yourname" placeholder="   yourname">
+                <input class="name-email" type="email" name="email" id="email" placeholder="  your email">
+                <textarea class="message" name="your message" id="" cols="30" rows="10"
+                    placeholder=" your message"></textarea>
+                <input class="btn" type="submit">
+
+
             </div>
-            <input class="downloadbtn" type="submit" value="download cv">
 
         </div>
-        <div class="cot2">
-
-            <input class="name-email" type="text" name="yourname" id="yourname" placeholder="   yourname">
-            <input class="name-email" type="email" name="email" id="email" placeholder="  your email">
-            <textarea class="message" name="your message" id="" cols="30" rows="10"
-                placeholder=" your message"></textarea>
-            <input class="btn" type="submit">
 
 
-        </div>
-
-    </div>
-
-
-    </div>
+        <!-- </div> -->
+    </section>
 
 
     <script src="script.js"></script>
